--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@supabase/supabase-js": "^1.29.3",
     "next": "12.0.8",
     "react": "17.0.2",
