--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@supabase/supabase-js": "^1.29.3",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
